[Docs] Fix documentation colors and sidebar contrast

--- a/docs/assets/scss/_root-variables.scss
+++ b/docs/assets/scss/_root-variables.scss
@@ -83,7 +83,7 @@
   --color-primary-medium: #343a40;
   --color-primary-dark: #495057;
   --color-secondary-light: #f1f3f5;   
-  --color-secondary-medium: #dadddf;
+  --color-secondary-medium: #3c494f;
   --color-secondary-dark: #eee;
   --color-primary-blonde: #eeF3C5;
   --color-grey-light: #495057;
